--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="second_presentation">
                     <h3>Ver Más Del Juego</h3>
                     <div class="ad_container">
-                        <a href="" target="_blank"><img src="LOL/title.png" alt=""></a>
+                        <a href="https://www.youtube.com" target="_blank"><img src="LOL/title.png" alt=""></a>
                     </div>
                 </div>
             </div>
