--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="second_presentation">
                     <h3>Ver Más Del Juego</h3>
                     <div class="ad_container">
-                        <a href="https://formprojectdesignweb.000webhostapp.com" target="_blank"><img src="LOL/title.png" alt=""></a>
+                        <a href="https://poweremilio.github.io/FloridaDecay/index.html" target="_blank"><img src="LOL/title.png" alt=""></a>
                     </div>
                 </div>
             </div>
